testdata/baselines/reference/submodule/conformance/jsdocTemplateTagNameResolution.errors.txt
file.js(4,14): error TS2536: Type 'K' cannot be used to index type 'T'.
file.js(10,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== file.js (2 errors) ====
    /**
     * @template T
     * @template {keyof T} K
     * @typedef {T[K]} Foo
                 ~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T'.
     */
    
    const x = { a: 1 };
    
    /** @type {Foo<typeof x, "a">} */
    const y = "a";
          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.